--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -42,7 +42,10 @@ controller.status.fileexists.skip = File already exists
 controller.status.pluindefekt = Plugin error (out of date)
 controller.status.tempunavailable = Temporally unavailable
 convert.dialog.chooseformat = Select a dateformat
+convert.dialog.forcekeep = Keep force
 convert.dialog.keepformat = Use this format for this session
+convert.dialog.staykeepingformat = Try to get preferred format
+convert.dialog.toppriority = Preferred format
 convert.progress.convertingto = convert to
 convert.progress.unknownintype = Unknown format
 decrypter.invalidaccount = No valid account found
@@ -211,11 +214,13 @@ gui.config.jac.column.use = Use
 gui.config.jac.status.auto = Automatic detection
 gui.config.jac.status.noauto = Manual control
 gui.config.jdrr.close = Close
+gui.config.jdrr.infolable = 	 <span color=\"#4682B4\"> Check the IP address of the router and press the Start <br> W browser window with the home page of the router opens <br> Reconnect after you hit to stop and save. <br> More information is available </ span> <a href=\"http://wiki.jdownloader.org/index.php?title=Recorder\"> here </ a>
 gui.config.jdrr.popup.title = JDRRPopup
 gui.config.jdrr.reconnectfaild = Reconnect failed
 gui.config.jdrr.savereconnect = Reconnect was successfull. Save now?
 gui.config.jdrr.title = Reconnect Recorder
 gui.config.jdshutdown.forceshutdown = Force Shutdown (Not for all OS)
+gui.config.jdshutdown.hibernate = Hibernate (Not for all OS)
 gui.config.jdshutdown.standby = Standby (Not for all OS)
 gui.config.liveheader.autoconfig = Config router automatically
 gui.config.liveheader.btnfindip = Fetch Router IP
@@ -229,8 +234,10 @@ gui.config.liveheader.selectrouter = Select Router
 gui.config.liveheader.user = Login
 gui.config.liveheader.waitforip = Wait for new IP (sec)
 gui.config.liveheader.waittimeforipcheck = Firs IP check timeout (sec)
+gui.config.liveheader.warning.experimental = Do you want to test experimental Router reconnect methods?\r\n Please not that those methods can change some of your router settings!
 gui.config.liveheader.warning.nocurlconvert = JD can't convert the CURL script. Please ask the JD-Support-Team for support!
 gui.config.liveheader.warning.notfound = jDownloader can't detect your router settings.
+gui.config.liveheader.warning.upnpinactive = Please activate Upnp support in your router's network configuration. <br><a href=\"http://%s\">Go to Router</a><br><a href=\"http://wiki.jdownloader.org/index.php?title=Router_Upnp\">Wiki article: Upnp in Router</a><br>Click OK when you activate Upnp support in router or Cancel to skip.
 gui.config.liveheader.warning.wizard = The settings search can take a while. Please enter your router login data. Execute now?
 gui.config.liveheader.warning.wizard.checkall = Check all routers (very slow)
 gui.config.liveheader.warning.wizard.title = Start automatic router-detection now?
@@ -255,11 +262,10 @@ gui.config.plugin.optional.link_help = http://www.wiki.jdownloader.org/index.php
 gui.config.plugin.optional.linktext_help = Help
 gui.config.popup.title = Configuration
 gui.config.reconnect.name = Reconnect
+gui.config.reconnect.showupload = Show Reconnect Info Upload Window
 gui.config.reloadcontainer = Reload Download Container
 gui.config.routeripfinder = Router IP-Search
 gui.config.routeripfinder.close = Close Window
-routerinfocollector.dialog.title = Please help us to improve the automatic routerdetection.
-routerinfocollector.dialog.msg = <b>To improve the automated Router and Reconnect detection, we collect routerinformation!</b><br>If you agree on uploading the given details of your router confirm with YES!
 gui.config.routeripfinder.featchip = Detecting your router's IP
 gui.config.routeripfinder.ready = IP found: %s
 gui.config.showcontaineronloadinfo = Show detailed containerinformation on load
@@ -288,9 +294,12 @@ gui.config.unrar.use_extractto = Use customized extract path
 gui.config.unrar.use_subpath = Use subpath
 gui.configdialog.wikilink.theconfigurationmenu = http://wiki.jdownloader.org/index.php?title=Konfig_en:
 gui.dialog.about.chat = Chat
+gui.dialog.about.chaturl = http://www.jdownloader.org/pl/knowledge/index
 gui.dialog.about.email = Email
 gui.dialog.about.forum = Support board
+gui.dialog.about.forumurl = http://www.the-lounge.org/viewforum.php?f=340
 gui.dialog.about.homepage = Homepage
+gui.dialog.about.homeurl = http://www.jdownloader.org/home
 gui.dialog.about.jddevteam = JDownloader Developer Team
 gui.dialog.about.member = Member
 gui.dialog.about.section = Section
@@ -315,6 +324,7 @@ gui.downloadlink.errorpostprocess = [failed] %s
 gui.downloadlink.errorpostprocess2 = [convert failed]
 gui.downloadlink.finished = [finished]
 gui.downloadlink.hosterwaittime = [wait for new ip]
+gui.downloadlink.plugindisabled = [Plugin disabled]
 gui.downloadlink.status.wait = wait %s min
 gui.downloadlist.delete = Delete selected links ?
 gui.downloadlist.delete_downloadlinks = Remove completed downloads?
@@ -1098,6 +1108,8 @@ plugins.trayicon.popup.menu.toggleclipboard = Enable/Disable monitor clipboard
 plugins.trayicon.popup.menu.togglereconnect = Enable/Disable reconnect
 plugins.trayicon.popup.menu.update = Execute update
 plugins.trayicon.popup.title = JDownloader
+routerinfocollector.dialog.msg = <b>To improve the automated Router and Reconnect detection, we collect routerinformation!</b><br>If you agree on uploading the given details of your router confirm with YES!
+routerinfocollector.dialog.title = Please help us to improve the automatic routerdetection.
 showcaptcha.choose.file = Select a Imagefile
 showcaptcha.chooser.title = jDownloader :: Show Captcha
 sys.ask.rlyclose = Really wanna close jDownloader?
@@ -1137,6 +1149,7 @@ system.update.error.message = Installing updates FAILED for this packages:<hr>%s
 system.update.error.message.infolink = %s v.%s <a href='%s'>INFO</a><br/>
 system.update.message.title = Update to version %s
 system.update.showchangelog = Show all changes
+system.update.showchangelogv2 = What's new?
 system.update.success.message = Installed new updates<hr>%s
 system.update.success.message.infolink = %s v.%s <a href='%s'>INFO</a><br/>
 train.choose.folder = Select a folder
